# lithedb

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  build.rs  skills-lock.json
.agents/skills/qt6-desktop-ux/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/lithedb-qt/: CMakeLists.txt
apps/lithedb-qt/packaging/linux/: PKGBUILD  build-appimage.sh  build-arch.sh  io.github.tuansaker1412.LitheDB.desktop  io.github.tuansaker1412.LitheDB.metainfo.xml
apps/lithedb-qt/packaging/macos/: build-dmg.sh
apps/lithedb-qt/packaging/windows/: deploy-runtime.ps1
apps/lithedb-qt/src/: bridge_client.cpp  bridge_client.h  bridge_utils.cpp  bridge_utils.h  connection_dialog.cpp  connection_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  row_editor_dialog.cpp  row_editor_dialog.h  table_model_utils.cpp  table_model_utils.h  theme.cpp  theme.h  theme.qss  ui_helpers.cpp  ui_helpers.h
apps/lithedb-qt/src/components/query/: query_editor_tab_widget.cpp  query_editor_tab_widget.h  query_result_widget.cpp  query_result_widget.h  sql_syntax_highlighter.cpp  sql_syntax_highlighter.h
apps/lithedb-qt/src/components/sidebar/: connection_sidebar_widget.cpp  connection_sidebar_widget.h
apps/lithedb-qt/src/components/table/: inline_edit_delegate.cpp  inline_edit_delegate.h  table_data_widget.cpp  table_data_widget.h  table_page_widget.cpp  table_page_widget.h  table_structure_widget.cpp  table_structure_widget.h
apps/lithedb-qt/src/dialogs/: about_dialog.cpp  about_dialog.h  create_database_dialog.cpp  create_database_dialog.h  drop_database_dialog.cpp  drop_database_dialog.h  preferences_dialog.cpp  preferences_dialog.h  shortcuts_dialog.cpp  shortcuts_dialog.h
apps/lithedb-qt/src/mainwindow/: mainwindow_chrome.cpp  mainwindow_connections.cpp  mainwindow_query.cpp  mainwindow_shared.cpp  mainwindow_shared.h  mainwindow_table.cpp
apps/lithedb-qt/src/models/: connection_tree_roles.h  query_tab_state.h  result_table_model.cpp  result_table_model.h
crates/lithedb-bridge/: Cargo.toml
crates/lithedb-bridge/src/: cli.rs  daemon.rs  main.rs  payloads.rs  support.rs
crates/lithedb-bridge/src/commands/: connections.rs  crud.rs  database.rs  mod.rs  query.rs  schema.rs
crates/lithedb-core/: Cargo.toml  build.rs
crates/lithedb-core/src/: lib.rs
crates/lithedb-core/src/config/: connection.rs  crypto.rs  paths.rs
crates/lithedb-core/src/db/: driver.rs  registry.rs
crates/lithedb-core/src/db/mysql/: mod.rs  pool.rs
crates/lithedb-core/src/db/postgres/: mod.rs  pool.rs  value.rs
crates/lithedb-core/src/db/sqlite/: mod.rs
crates/lithedb-core/src/state/: mod.rs
crates/lithedb-core/src/state/app_state/: connections.rs  data_ops.rs  lifecycle.rs  mod.rs
crates/lithedb-core/tests/: db_postgres_value.rs
packaging/arch/: PKGBUILD
packaging/flatpak/: io.github.tuansaker1412.LitheDB.desktop  io.github.tuansaker1412.LitheDB.metainfo.xml  io.github.tuansaker1412.LitheDB.yml  org.dbclient.App.desktop  org.dbclient.App.metainfo.xml  org.dbclient.App.yml  org.tableprolinux.App.desktop  org.tableprolinux.App.metainfo.xml  org.tableprolinux.App.yml
scripts/: build-all.sh  build-arch.sh  build-deb.sh  build-flatpak.sh  build-rpm.sh  build-run-qt.sh
src/: app.rs  lib.rs  main.rs
src/config/: connection.rs  crypto.rs  mod.rs  settings.rs
src/db/: driver.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/db/mysql/: mod.rs  value.rs
src/db/postgres/: mod.rs  value.rs
src/db/sqlite/: mod.rs  pool.rs  value.rs
src/state/: app_state.rs  runtime.rs
src/state/app_state/: lifecycle.rs
src/ui/: header_bar.rs  mod.rs  notify.rs  window.rs  window.rs.backup
src/ui/dialogs/: connection_dialog.rs  mod.rs  row_editor_dialog.rs
src/ui/editor/: mod.rs  query_tab.rs
src/ui/grid/: mod.rs  result_grid.rs  structure_view.rs  table_tab.rs
src/ui/grid/result_grid/: clipboard.rs  columns.rs  mod.rs  row_menu.rs
src/ui/sidebar/: connection_panel.rs  mod.rs  schema_tree.rs
src/ui/sidebar/connection_panel/: mod.rs  render.rs  tables.rs  tree_utils.rs
src/ui/window/: crud.rs  data_tabs.rs  dialogs.rs  events.rs  mod.rs  query_tabs.rs  schema.rs
tests/: db_mysql.rs  db_postgres.rs  db_sqlite.rs
