[package]
name = "table-pro-linux"
version = "0.1.2"
edition = "2021"
description = "A modern, native Linux database client built with Rust, GTK4, and libadwaita"
license = "MIT"
homepage = "https://github.com/tuansaker1412/table-pro-linux"
repository = "https://github.com/tuansaker1412/table-pro-linux"

[dependencies]
gtk4 = "0.7"
libadwaita = { version = "0.5", features = ["v1_2"] }
sourceview5 = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono"] }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
keyring = "2"
aes-gcm = "0.10"
directories = "5"
log = "0.4"
env_logger = "0.11"

hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
maintainer = "Table Pro Linux <contact@tableprolinux.org>"
copyright = "2026, Table Pro Linux Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
A modern, native Linux database client built with Rust, GTK4, and libadwaita.
Supports PostgreSQL, MySQL, and SQLite with features including:
- SQL editor with syntax highlighting
- Result grid with pagination and CSV export
- Secure connection management with keyring integration
- Native GTK4/libadwaita interface"""
depends = "$auto, libgtk-4-1, libadwaita-1-0, libgtksourceview-5-0, libsqlite3-0"
section = "database"
priority = "optional"
assets = [
    ["target/release/table-pro-linux", "usr/bin/", "755"],
    ["packaging/flatpak/org.tableprolinux.App.desktop", "usr/share/applications/", "644"],
    ["packaging/flatpak/org.tableprolinux.App.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["packaging/flatpak/org.tableprolinux.App.metainfo.xml", "usr/share/metainfo/", "644"],
    ["README.md", "usr/share/doc/table-pro-linux/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/table-pro-linux", dest = "/usr/bin/table-pro-linux", mode = "755" },
    { source = "packaging/flatpak/org.tableprolinux.App.desktop", dest = "/usr/share/applications/org.tableprolinux.App.desktop", mode = "644" },
    { source = "packaging/flatpak/org.tableprolinux.App.svg", dest = "/usr/share/icons/hicolor/scalable/apps/org.tableprolinux.App.svg", mode = "644" },
    { source = "packaging/flatpak/org.tableprolinux.App.metainfo.xml", dest = "/usr/share/metainfo/org.tableprolinux.App.metainfo.xml", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/table-pro-linux/README.md", mode = "644" },
]
[package.metadata.generate-rpm.requires]
gtk4 = "*"
libadwaita = "*"
gtksourceview5 = "*"
sqlite = "*"
