[package]
name = "lithedb"
version = "0.1.2"
edition = "2021"
description = "LitheDB is a lightweight native database client for Linux built with Rust, GTK4, and libadwaita"
license = "MIT"
homepage = "https://github.com/tuansaker1412/lithedb"
repository = "https://github.com/tuansaker1412/lithedb"

[dependencies]
gtk4 = "0.7"
libadwaita = { version = "0.5", features = ["v1_2"] }
sourceview5 = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
keyring = "2"
aes-gcm = "0.10"
directories = "5"
log = "0.4"
env_logger = "0.11"

hex = "0.4"
sha2 = "0.10"
rand = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[package.metadata.deb]
maintainer = "LitheDB Contributors <contact@lithedb.dev>"
copyright = "2026, LitheDB Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
LitheDB is a lightweight native database client for Linux built with Rust, GTK4, and libadwaita.
Supports PostgreSQL, MySQL, and SQLite with features including:
- SQL editor with syntax highlighting
- Result grid with pagination and CSV export
- Secure connection management with keyring integration
- Native GTK4/libadwaita interface"""
depends = "$auto, libgtk-4-1, libadwaita-1-0, libgtksourceview-5-0, libsqlite3-0"
section = "database"
priority = "optional"
assets = [
    ["target/release/lithedb", "usr/bin/", "755"],
    ["packaging/flatpak/io.github.tuansaker1412.LitheDB.desktop", "usr/share/applications/", "644"],
    ["packaging/flatpak/io.github.tuansaker1412.LitheDB.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
    ["packaging/flatpak/io.github.tuansaker1412.LitheDB.metainfo.xml", "usr/share/metainfo/", "644"],
    ["README.md", "usr/share/doc/lithedb/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/lithedb", dest = "/usr/bin/lithedb", mode = "755" },
    { source = "packaging/flatpak/io.github.tuansaker1412.LitheDB.desktop", dest = "/usr/share/applications/io.github.tuansaker1412.LitheDB.desktop", mode = "644" },
    { source = "packaging/flatpak/io.github.tuansaker1412.LitheDB.svg", dest = "/usr/share/icons/hicolor/scalable/apps/io.github.tuansaker1412.LitheDB.svg", mode = "644" },
    { source = "packaging/flatpak/io.github.tuansaker1412.LitheDB.metainfo.xml", dest = "/usr/share/metainfo/io.github.tuansaker1412.LitheDB.metainfo.xml", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/lithedb/README.md", mode = "644" },
]
[package.metadata.generate-rpm.requires]
gtk4 = "*"
libadwaita = "*"
gtksourceview5 = "*"
sqlite = "*"
