[package]
name = "lithedb-bridge"
version = "0.1.2"
edition = "2021"
description = "CLI bridge between Qt frontend and lithedb-core"
license = "MIT"

[dependencies]
lithedb-core = { path = "../lithedb-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
