[package]
name = "lithedb-core"
version = "1.0.0"
edition = "2021"
description = "Shared core services for LitheDB frontends"
license = "MIT"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "mysql", "sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
keyring = "2"
aes-gcm = "0.10"
directories = "5"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
